# bclibc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  bclibc-config.cmake.in  bclibc.json  build.bat  build.ps1  build.sh  build_wasm.sh  clean.ps1  pre-commit-check.sh  version.h.in
.github/actions/gen_release_notes/: gen_release_notes.py
.github/workflows/: build-lib.yml  build-libs.yml  build-mpy.yml  emsdk-update.yml  natmod.yml  pr-check-mpy.yml  pr-check.yml  release.yml
examples/: test_bclibc_ffi.py  tiny_bclibc_micropython_unix_ffi.py  tiny_bclibc_natmod_bench_2core copy.py  tiny_bclibc_natmod_bench_2core.log.txt  tiny_bclibc_natmod_bench_2core.py  tiny_bclibc_natmod_test_2core.log.txt  tiny_bclibc_natmod_test_2core.py
examples/benchmarks/: tiny_bclibc_bench_report.md
examples/flops_bench/: Makefile
examples/tiny_bclibc_mp_ffi/: test_mp_ffi.py  tiny_bclibc_mp_ffi.py
include/: bclibc.hpp
include/bclibc/: base_types.hpp  bclibc_throw.hpp  engine.hpp  exceptions.hpp  log.hpp  traj_data.hpp  unit.hpp  velocity_verlet.hpp
include/bclibc/ffi/: bclibc_ffi.h
micropython/: README.md  micropython.cmake
micropython-natmod/: .gitignore  Makefile  README.md  RISC-V_picolibc.md  precision_compare.py  precision_run.py  test_bclibc.py  test_bclibc_ffi.py  tiny_bclibc.py  tiny_bclibc_bench.py  tiny_bclibc_types.py  version.h.in
micropython-natmod/ci/: run_qemu.py
micropython-natmod/examples/: tiny_bclibc_natmod_bench_2core.py
micropython-natmod/src/: bclibc_mp.c  drag_tables.h  math_shim.c  mem_shim.c  tiny_bclibc.py  tiny_bclibc_mp.c
micropython-natmod/src/math_shadow/: math.h
micropython/natmod/: .gitignore  Makefile  bclibc_mp.c  cxx_stubs.cpp  natmod_stdexcept_compat.hpp
src/: base_types.cpp  engine.cpp  euler.cpp  rk4.cpp  traj_data.cpp  traj_filter.cpp  velocity_verlet.cpp
src/ffi/: bclibc_ffi.cpp  bclibc_ffi.version
tests/: CMakeLists.txt  test_traj_data.cpp
tiny_bclibc/: CMakeLists.txt  Makefile  PLAN.md  README.md  test_ffi.py  tiny_bclibc-config.cmake.in  tiny_bclibc_ffi.py  version.h.in
tiny_bclibc/include/: tiny_bclibc.h
tiny_bclibc/include/tiny_bclibc/: base_types.h  engine.h  interp.h  platform.h  traj_data.h  v3d.h
tiny_bclibc/src/: tiny_bclibc_impl.c
tiny_bclibc/tests/: CMakeLists.txt  compare.hpp  fixture.hpp  test_identity.cpp
